--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "template-ts",
   "version": "0.0.1",
   "description": "",
+  "main": "dist/main.js",
+  "bin": "dist/bin.js",
   "scripts": {
     "test": "npm run test:tsc; npm run test:jest;",
     "test:jest": "node builder.js test",
@@ -11,7 +13,7 @@
     "prebuild": "npm run test",
     "build": "npm run build:declarations; npm run build:js",
     "build:js": "node builder.js build",
-    "build:declarations": "tsc --declaration --emitDeclarationOnly"
+    "build:declarations": "tsc --declaration --emitDeclarationOnly --outDir ./dist-types/"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +22,7 @@
     "@types/node": "^20.4.3",
     "esbuild": "^0.17.19",
     "jest": "^29.6.1",
+    "pkg": "^5.8.1",
     "typescript": "^5.1.6"
   }
 }
