--- a/package.json
+++ b/package.json
@@ -18,11 +18,21 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.4.3",
     "esbuild": "^0.17.19",
     "jest": "^29.6.1",
     "pkg": "^5.8.1",
     "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
+  },
+  "pkg": {
+    "scripts": [],
+    "assets": ["public/**/*"],
+    "targets": ["node18-linux", "node18-win", "node18-mac"],
+    "outputPath": "./dist-exe/"
   }
 }
