--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "template-ts",
   "version": "0.0.1",
-  "description": "",
+  "description": "TypeScript project template",
   "main": "dist/main.js",
   "bin": "dist/bin.js",
   "scripts": {
