--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "template-ts",
   "version": "0.0.1",
-  "description": "",
+  "description": "TypeScript project template",
+  "main": "dist/main.js",
+  "bin": "dist/bin.js",
   "scripts": {
     "test": "npm run test:tsc; npm run test:jest;",
     "test:jest": "node builder.js test",
@@ -11,15 +13,28 @@
     "prebuild": "npm run test",
     "build": "npm run build:declarations; npm run build:js",
     "build:js": "node builder.js build",
-    "build:declarations": "tsc --declaration --emitDeclarationOnly"
+    "build:declarations": "tsc --declaration --emitDeclarationOnly --outDir ./dist-types/",
+    "preexport": "npm run test;npm run build:js",
+    "export": "pkg ."
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.4.3",
     "esbuild": "^0.17.19",
     "jest": "^29.6.1",
+    "pkg": "^5.8.1",
     "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
+  },
+  "pkg": {
+    "scripts": [],
+    "assets": ["public/**/*"],
+    "targets": ["node18-linux", "node18-win", "node18-mac"],
+    "outputPath": "./dist-exe/"
   }
 }
