add db examples + lockfile

--- a/package.json
+++ b/package.json
@@ -33,8 +33,14 @@
   },
   "pkg": {
     "scripts": [],
-    "assets": ["public/**/*"],
-    "targets": ["node18-linux", "node18-win", "node18-mac"],
+    "assets": [
+      "public/**/*"
+    ],
+    "targets": [
+      "node18-linux",
+      "node18-win",
+      "node18-mac"
+    ],
     "outputPath": "./dist-exe/"
   }
 }
